# librealsense

./: .gitignore  BrainStemLog.txt  CMakeLists.txt  LICENSE  NOTICE.md  README.md  TEST_COVERAGE_ANALYSIS.md  analyze_tests.py  hi.txt  output.txt  package.xml  readme.md  tare_debug_run.py  windows_installation.html
.claude/: read-project-instructions.py
.github/: CI_STATUS.md  ISSUE_TEMPLATE.md  agent-instructions.md  copilot-instructions.md
CMake/: android_config.cmake  cuda_config.cmake  external_fastcdr.cmake  external_libcurl.cmake  external_libusb.cmake  global_config.cmake  hip_config.cmake  libusb_config.cmake  lrs_options.cmake  macos-device-access.entitlements  macos_codesign.cmake
build-flags-docs/: build-flags.html
common/: CMakeLists.txt  bag-conversion-helper.cpp  bag-conversion-helper.h  cli.h  device-model.cpp  device-model.h  embedded-filter-model.h  fw-update-helper.cpp  metadata-helper.cpp  min-z-depth-improver.cpp  min-z-depth-improver.h  minz-filter.h  objects-in-frame.h  on-chip-calib.cpp  option-model.cpp  option-model.h  os.cpp  output-model.cpp  output-model.h  processing-block-model.h  rendering.h  rs-config.cpp  rs-config.h  stream-model.cpp  stream-model.h  subdevice-model.cpp  subdevice-model.h  textual-icons.h  ux-window.cpp  ux-window.h  viewer.cpp  viewer.h
config/: 99-realsense-libusb.rules
doc/: distribution_linux.md  installation_jetson.md  installation_osx.md  installation_windows.md  project_context.md  record-and-playback-legacy-ros1.md  (+3 more)
tools/safety-stream-collect/: CMakeLists.txt  readme.md  rs-safety-stream-collect.cpp
(+1331 files in other folders)
